<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="expense_home_header">Build long-term wealth</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="home_item">Home</string>
    <string name="expense_item">Expenses</string>
    <string name="wallet">Wallet</string>
    <string name="account_item">Account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="remember_me">Remember me</string>
    <string name="expense">expense</string>
    <string name="wallet_item">Wallet</string>
    <string name="no_expenses">No Expenses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_month_s_spend">THIS MONTH\'S SPEND</string>
    <string name="today_is">TODAY IS</string>
    <string name="spending_wallet_budget">Spending Wallet/Budget</string>
    <string name="see_all">See all..</string>
    <string name="welcome_message">Welcome, %s!</string>
    <string name="money_symbol">$%s</string>
    <string name="expense_amount_format">- %s</string>
    <string name="earning_amount_format">+ %s</string>
    <string name="notifications">Notifications</string>
</resources>