<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/signupImg"
        android:layout_width="271dp"
        android:layout_height="221dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="@drawable/signup_img" />

    <EditText
        android:id="@+id/usernameSignup"
        android:layout_width="275dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:autofillHints="username"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupImg"
        app:layout_constraintVertical_bias="0.098"
        android:inputType="text" />


    <EditText
        android:id="@+id/firstnameSignup"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignup"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/passwordSignup"
        android:layout_width="275dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameSignup"
        app:layout_constraintVertical_bias="0.148" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:background="@drawable/black_main_btn"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameSignup"
        app:layout_constraintVertical_bias="0.714" />

</androidx.constraintlayout.widget.ConstraintLayout>